@@ -33,7 +33,9 @@ Return to form and confirm that it renders properly::
     <!DOCTYPE...
     ...
      <div class="pfg-form formid-testform">
-      <form ...action="http://nohost/plone/testform"...>
+      <form...
+            enctype="multipart/form-data"...
+            action="http://nohost/plone/testform"...>
           ...
           <input...name="replyto".../>
           ...
@@ -230,6 +232,17 @@ Attempts to read our special member attributes TTW should fail::
     Traceback (most recent call last):
     ...
     HTTPError: HTTP Error 404: Not Found
+
+The form `enctype`_ can be set in the overrides schema.
+
+    >>> self.portal.testform.setEnctype('application/x-www-form-urlencoded')
+    >>> browser.open(self.portal_url + '/testform')
+    >>> print browser.contents
+    <!DOCTYPE...
+    ...
+     <div class="pfg-form formid-testform">
+      <form...
+            enctype="application/x-www-form-urlencoded"...
 
 
 # Embedded form
